Added features for testing security configuration

--- a/fixture-web/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/fixture-web/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -1,3 +1,5 @@
+administration.index.title=Administration
+
 common.footer.change-theme=Change theme
 common.footer.back-to-top=Back to top
 common.footer.privacy=Privacy
@@ -9,7 +11,10 @@ common.navigation.contact=Contact
 common.navigation.join=Join
 common.navigation.login=Log in
 
+secure.index.title=Secure
+
 static.about.title=About
+static.access-denied.title=Access denied
 static.contact.title=Contact
 static.index.title=fixture.io
 static.join.title=Join
