Added base configuration for user administration

--- a/fixture-web/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/fixture-web/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -1,5 +1,7 @@
 administration.index.title=Administration
 
+administration.users.title=User administration
+
 common.footer.change-theme=Change theme
 common.footer.back-to-top=Back to top
 common.footer.privacy=Privacy
