added navigation handling for logging in/logging out

--- a/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -32,6 +32,7 @@ common.navigation.about=About
 common.navigation.contact=Contact
 common.navigation.join=Join
 common.navigation.login=Log in
+common.navigation.logout=Log out
 
 secure.index.title=Secure
 
