Refactored registration infrastructure ready for full implementation

--- a/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -34,13 +34,14 @@ common.navigation.join=Join
 common.navigation.login=Log in
 common.navigation.logout=Log out
 
+registration.title=Join
+
 secure.index.title=Secure
 
 static.about.title=About
 static.access-denied.title=Access denied
 static.contact.title=Contact
 static.index.title=fixture.io
-static.join.title=Join
 static.login.title=Log in
 static.login.error=Log in failed
 static.login.username=Username
