--- a/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -30,9 +30,9 @@ common.footer.terms-of-use=Terms of use
 common.navigation.index=fixture.io
 common.navigation.about=About
 common.navigation.contact=Contact
-common.navigation.join=Join
 common.navigation.login=Log in
 common.navigation.logout=Log out
+common.navigation.register=Register
 
 registration.title=Join
 
