removed left over references to "join"

--- a/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -34,7 +34,7 @@ common.navigation.login=Log in
 common.navigation.logout=Log out
 common.navigation.register=Register
 
-registration.title=Join
+registration.title=Register
 
 secure.index.title=Secure
 
