Added first part of registration process (form input and vaildation)

--- a/src/main/resources/META-INF/spring/messages/fixture_en.properties
+++ b/src/main/resources/META-INF/spring/messages/fixture_en.properties
@@ -34,7 +34,41 @@ common.navigation.login=Log in
 common.navigation.logout=Log out
 common.navigation.register=Register
 
-registration.title=Register
+registration.index.title=Register
+registration.index.givenName.label=Given name
+registration.index.givenName.placeholder=Given name
+registration.index.familyName.label=Family name
+registration.index.familyName.placeholder=Family name
+registration.index.email.label=Email
+registration.index.email.placeholder=email@example.com
+registration.index.username.label=Username
+registration.index.username.placeholder=username
+registration.index.password.label=Password
+registration.index.password.placeholder=password
+registration.index.confirm.label=Confirm
+registration.index.confirm.placeholder=confirm
+registration.index.accept.label=Accept
+registration.index.submit=Register
+
+registration.sent.title=Registration confirmation sent
+registration.sent.body=\
+    <p>\
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.\
+        In laborum magni molestiae nostrum perspiciatis, quam quis.\
+        Earum et laborum sit soluta! Aliquam incidunt labore natus praesentium rem sapiente sint voluptatem.\
+    </p>\
+    <p>\
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\
+    </p>\
+    <p>\
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\
+    </p>
 
 secure.index.title=Secure
 
