Added registration activation and email config

--- a/src/main/resources/META-INF/spring/messages/registration_en.properties
+++ b/src/main/resources/META-INF/spring/messages/registration_en.properties
@@ -34,7 +34,11 @@ registration.index.confirm.placeholder=confirm
 registration.index.accept.label=Accept
 registration.index.submit=Register
 
+registration.email.subject=Fixture Account Registration
+registration.email.template=en/registration-activation.vm
+
 registration.sent.title=Registration confirmation sent
+## TODO UGGGH HTML embedded here!?!?!?
 registration.sent.body=\
     <p>\
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.\
