--- a/src/main/resources/META-INF/spring/messages/registration_en.properties
+++ b/src/main/resources/META-INF/spring/messages/registration_en.properties
@@ -56,3 +56,25 @@ registration.sent.body=\
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\
         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\
     </p>
+
+registration.activated.title=Fixture Account Activated
+## TODO UGGGH HTML embedded here!?!?!?
+registration.activated.body=\
+    <p>\
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.\
+        In laborum magni molestiae nostrum perspiciatis, quam quis.\
+        Earum et laborum sit soluta! Aliquam incidunt labore natus praesentium rem sapiente sint voluptatem.\
+    </p>\
+    <p>\
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\
+    </p>\
+    <p>\
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\
+    </p>
+
