updated "register" and "registration" references for consistancy

--- a/src/main/resources/META-INF/spring/messages/common_en.properties
+++ b/src/main/resources/META-INF/spring/messages/common_en.properties
@@ -28,4 +28,4 @@ common.navigation.about=About
 common.navigation.contact=Contact
 common.navigation.login=Log in
 common.navigation.logout=Log out
-common.navigation.register=Register
+common.navigation.registration=Register
