--- a/src/main/resources/META-INF/spring/messages/registration_en.properties
+++ b/src/main/resources/META-INF/spring/messages/registration_en.properties
@@ -18,7 +18,7 @@
 # #L%
 ###
 
-registration.index.title=Register
+registration.index.title=Registration
 registration.index.givenName.label=Given name
 registration.index.givenName.placeholder=Given name
 registration.index.familyName.label=Family name
